--- a/docs/blocks/machines/industrial_grinder.mdx
+++ b/docs/blocks/machines/industrial_grinder.mdx
@@ -224,7 +224,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "minecraft:diamond_boot",
+      "id": "minecraft:diamond_boots",
       "qty": 1
     }
   ],
@@ -252,7 +252,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_boots_with_water",
   "input": [
     {
-      "id": "minecraft:diamond_boot",
+      "id": "minecraft:diamond_boots",
       "qty": 1
     }
   ],
@@ -516,7 +516,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "minecraft:diamond_legging",
+      "id": "minecraft:diamond_leggings",
       "qty": 1
     }
   ],
@@ -544,7 +544,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "diamond_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "minecraft:diamond_legging",
+      "id": "minecraft:diamond_leggings",
       "qty": 1
     }
   ],
@@ -1483,7 +1483,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "techreborn:peridot_boot",
+      "id": "techreborn:peridot_boots",
       "qty": 1
     }
   ],
@@ -1511,7 +1511,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_boots_with_water",
   "input": [
     {
-      "id": "techreborn:peridot_boot",
+      "id": "techreborn:peridot_boots",
       "qty": 1
     }
   ],
@@ -1683,7 +1683,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "techreborn:peridot_legging",
+      "id": "techreborn:peridot_leggings",
       "qty": 1
     }
   ],
@@ -1711,7 +1711,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "peridot_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "techreborn:peridot_legging",
+      "id": "techreborn:peridot_leggings",
       "qty": 1
     }
   ],
@@ -2684,7 +2684,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "techreborn:ruby_boot",
+      "id": "techreborn:ruby_boots",
       "qty": 1
     }
   ],
@@ -2712,7 +2712,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_boots_with_water",
   "input": [
     {
-      "id": "techreborn:ruby_boot",
+      "id": "techreborn:ruby_boots",
       "qty": 1
     }
   ],
@@ -2884,7 +2884,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "techreborn:ruby_legging",
+      "id": "techreborn:ruby_leggings",
       "qty": 1
     }
   ],
@@ -2912,7 +2912,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "ruby_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "techreborn:ruby_legging",
+      "id": "techreborn:ruby_leggings",
       "qty": 1
     }
   ],
@@ -3242,7 +3242,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_boots_with_mercury",
   "input": [
     {
-      "id": "techreborn:sapphire_boot",
+      "id": "techreborn:sapphire_boots",
       "qty": 1
     }
   ],
@@ -3270,7 +3270,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_boots_with_water",
   "input": [
     {
-      "id": "techreborn:sapphire_boot",
+      "id": "techreborn:sapphire_boots",
       "qty": 1
     }
   ],
@@ -3442,7 +3442,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_leggings_with_mercury",
   "input": [
     {
-      "id": "techreborn:sapphire_legging",
+      "id": "techreborn:sapphire_leggings",
       "qty": 1
     }
   ],
@@ -3470,7 +3470,7 @@ Attach the **Industrial Grinder** to the middle layer centre and connect it to a
   "id": "sapphire_dust_from_leggings_with_water",
   "input": [
     {
-      "id": "techreborn:sapphire_legging",
+      "id": "techreborn:sapphire_leggings",
       "qty": 1
     }
   ],
